src/test/ui/specialization/defaultimpl/specialization-trait-not-implemented.stderr
error[E0599]: no method named `foo_one` found for struct `MyStruct` in the current scope
  --> $DIR/specialization-trait-not-implemented.rs:22:29
   |
LL | trait Foo {
   | --------- this trait defines an item `foo_one`
...
LL | struct MyStruct;
   | ----------------
   | |
   | method `foo_one` not found for this
   | the method `foo_one` exists but this type doesn't satisfy the bound `MyStruct: Foo`
...
LL |     println!("{}", MyStruct.foo_one());
   |                             ^^^^^^^ method not found in `MyStruct`
   |
   = help: items from traits can only be used if the trait is implemented and in scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
